--- a/a02-group.tex
+++ b/a02-group.tex
@@ -47,19 +47,19 @@ $\mathbb{Z}$ (i.e., the set of all integers) is an abelian group under addition 
 \begin{itemize}
 \item \textbf{Closed:} For any integer $a, b \in \mathbb{Z}$, $a + b = c$ is also an integer ($\in \mathbb{Z}$).
 \item \textbf{Associative:} For any integer $a, b, c \in \mathbb{Z}$, $(a + b) + c = a + (b + c)$.
-\item \textbf{Identity:} The additive identity is 0, because for any $a \in \mathbb{Z}$, $a + 0 = a$.
+\item \textbf{Identity:} The additive identity is 0 because, for any $a \in \mathbb{Z}$, $a + 0 = a$.
 \item \textbf{Inverse:} For each $a \in \mathbb{Z}$, its additive inverse is $-a$, as $a + (-a) = 0$.
 \item \textbf{Commutative: } For any integer $a, b \in \mathbb{Z}$, $a + b = b + a$.
 \end{itemize}
 
 $ $
 
-\noindent $\mathbb{Z}$ is a monoid under multiplication ($\cdot$), because:
+\noindent $\mathbb{Z}$ is a monoid under multiplication ($\cdot$) because:
 \begin{itemize}
 \item \textbf{Closed:} For any integer $a, b \in \mathbb{Z}$, $a \cdot b = c$ is also an integer ($\in \mathbb{Z}$).
 \item \textbf{Associative:} For any integer $a, b, c \in \mathbb{Z}$, $(a \cdot b) \cdot c = a \cdot (b \cdot c)$.
 \item \textbf{Identity:} The multiplicative identity is 1, because for any $a \in \mathbb{Z}$, $a \cdot 1 = a$.
-\item \textbf{NO Inverse:} For an integer $a \in \mathbb{Z}$, its multiplicative inverse is $\dfrac{1}{a}$, but this is not necessarily an integer ($\notin \mathbb{Z}$), therefore not every element has a multiplicative inverse, so $(\mathbb{Z},\cdot)$ is not a group (though it is a monoid).
+\item \textbf{NO Inverse:} For an integer $a \in \mathbb{Z}$, its multiplicative inverse is $\dfrac{1}{a}$, but this is not necessarily an integer ($\notin \mathbb{Z}$); therefore, not every element has a multiplicative inverse. Thus, $(\mathbb{Z},\cdot)$ is not a group (though it is a monoid).
 \end{itemize}
 $ $
 
