--- a/a07-roots-of-unity.tex
+++ b/a07-roots-of-unity.tex
@@ -93,8 +93,8 @@ $ $
 \begin{enumerate}
 \item Given $\zeta^n = 1$, the roots of unity are $\zeta = \omega^k$ where $\omega = e^{2\pi i/n}$ and $k = \{0, 1, \cdots, n-1\}$ 
 \item By definition, $\omega^k$ is a primitive $n$-th root of unity if and only if $\textsf{ord}_{\mathbb{C}}(\omega^k) = n$. 
-\item $\omega$ is a primitive $n$-th root of unity, because $\textsf{ord}_{\mathbb{C}}(\omega) = n$. 
+\item $\omega$ is a primitive $n$-th root of unity because $\textsf{ord}_{\mathbb{C}}(\omega) = n$. 
 \item According to Theorem~\ref*{subsec:order-theorem}.2, if $\textsf{ord}_{\mathbb{C}}(\omega) = n$, then $\textsf{ord}_{\mathbb{C}}(\omega^k) = \dfrac{n}{\text{gcd}(k,n)}$. Therefore, in order for $\textsf{ord}_{\mathbb{C}}(\omega^k) = n$, $\text{gcd}(k,n)$ has to be 1. In other words, $k$ and $n$ have to be co-prime.
-The total number of such co-primes between $n$ and $k = \{1, 2, \cdots, n-1\}$ (excluding 0 because $\text{gcd}(0, n)= n$ and also $\textsf{ord}_{\mathbb{C}}(\omega^0) = \textsf{ord}_{\mathbb{C}}(1) = 1 \neq n$) is $\phi(n)$, which corresponds to the total number of the primitive $n$-the root of unity.
+The total number of such co-primes between $n$ and $k = \{1, 2, \cdots, n-1\}$ (excluding 0 because $\text{gcd}(0, n)= n$ and also $\textsf{ord}_{\mathbb{C}}(\omega^0) = \textsf{ord}_{\mathbb{C}}(1) = 1 \neq n$) is $\phi(n)$, which corresponds to the total number of the primitive $n$-th root of unity.
 \end{enumerate}
 \end{proof}
